--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="mu.verdigris.hny"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" >
-        <activity android:name="HNY"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+          package="mu.verdigris.hny"
+          android:versionCode="1"
+          android:versionName="1.0"
+          android:installLocation="preferExternal">
+  <uses-sdk android:minSdkVersion="10"
+            android:targetSdkVersion="10" />
+  <application android:label="@string/app_name">
+    <activity android:name="HNY"
+              android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 </manifest> 
