--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,9 @@
             android:targetSdkVersion="10" />
   <application android:label="@string/app_name">
     <activity android:name="HNY"
-              android:label="@string/app_name">
+              android:label="@string/app_name"
+              android:configChanges="orientation"
+              android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
