--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
           android:installLocation="preferExternal">
   <uses-sdk android:minSdkVersion="10"
             android:targetSdkVersion="10" />
-  <application android:label="@string/app_name">
+  <application android:label="@string/app_name"
+               android:icon="@drawable/ic_verdigris">
     <activity android:name="HNY"
               android:label="@string/app_name"
               android:configChanges="orientation"
